--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -1,6 +1,6 @@
 basic_settings:
-  site_title: Index
-  site_tagline: A minimal, fixed sidebar grid portfolio Jekyll theme.
+  site_title: Barbara J Paris
+  site_tagline: Art by Barbara
   favicon_image: /images/favicon.png
 
 header_settings:
@@ -30,7 +30,7 @@ contact_settings:
 
 social_settings:
   facebook_url: ''
-  twitter_url: ''
+  twitter_url: 'https://twitter.com/yv_dus'
   instagram_url: ''
   snapchat_url: ''
   youtube_url: ''
@@ -57,7 +57,7 @@ social_settings:
   linkedin_url: ''
 
 color_settings:
-  background_color: '#ffffff'
+  background_color: '#1a1a1a'
   background_alt_color: '#F5F7FA'
   text_dark_color: '#2A2F36'
   text_medium_color: '#6C7A89'
