--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -60,7 +60,7 @@ color_settings:
   background_color: '#808080'
   background_alt_color: '#F5F7FA'
   text_dark_color: '#2A2F36'
-  text_medium_color: '#6C7A89'
+  text_medium_color: '#2A2F36'
   text_light_color: '#ABB7B7'
   accent_color: '#0C5DF2'
   border_color: '#dddddd'
