--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -57,14 +57,14 @@ social_settings:
   linkedin_url: ''
 
 color_settings:
-  background_color: '#FFFFFF'
+  background_color: '#849496'
   background_alt_color: '#F5F7FA'
   text_dark_color: '#2A2F36'
   text_medium_color: '#2A2F36'
   text_light_color: '#ABB7B7'
-  accent_color: '#0C5DF2'
+  accent_color: '#FFFFFF'
   border_color: '#dddddd'
-  overlay_background_color: '#0C5DF2'
+  overlay_background_color: '#DED9D5'
   overlay_text_color: '#ffffff'
   overlay_accent_color: '#2A2F36'
   error_color: '#D64541'
