--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -1,7 +1,7 @@
 basic_settings:
   site_title: Barbara J Paris
   site_tagline: Art by Barbara
-  favicon_image: /images/favicon.png
+  favicon_image: 
 
 header_settings:
   logo_image: 
