--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -30,7 +30,7 @@ contact_settings:
 
 social_settings:
   facebook_url: ''
-  twitter_url: 'https://twitter.com/yv_dus'
+  twitter_url: ''
   instagram_url: 'https://www.instagram.com/barbaraparis/?hl=en'
   snapchat_url: ''
   youtube_url: ''
